--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.telefonica.myapplication2"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -22,7 +23,9 @@
         android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="n">
         <activity
             android:windowSoftInputMode="stateHidden"
             android:name="com.telefonica.myapplication2.MainActivity"
